tests/ui/resolve/duplicate_definition.rx
//@ spec: RXS-0037, RXS-0038
fn same() -> i32 {
    1
}

fn same() -> i32 { //~ ERROR RX1002
    2
}
